feat: Try to write my own version in jsx

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
 
   <div id="app"></div>
 
-  <script type="text/javascript" src="build/js/index.js"></script>
+  <script type="text/javascript" src="build/js/zach-index-compiled.js"></script>
 
 </body>
 </html>
